@startuml mw_log_file_backend
' set namespaceSeperator ::

class "mw::log::detail::SlotDrainer" as SlotDrainer {
  -allocator_: std::unique_ptr<CircularAllocator<LogRecord>>&
  -message_builder_: std::unique_ptr<IMessageBuilder>
  -context_mutex_: std::mutex
  -circular_buffer_: amp::circular_buffer<SlotHandle, kMaxCircularBufferSize>
  -current_slot_: amp::optional<std::reference_wrapper<const SlotHandle>>
  -non_blocking_writer_: NonBlockingWriter
  -limit_slots_in_one_cycle_: const std::size_t
  --
  +SlotDrainer(std::unique_ptr<IMessageBuilder>,
               std::unique_ptr<CircularAllocator<LogRecord>>&,
               const std::int32_t,
               const std::size_t,
               std::unique_ptr<bmw::os::Unistd>)
  +PushBack(const SlotHandle&): void
  +Flush(): void
  -TryFlushSlots(): amp::expected<FlushResult, Error>
  -TryFlushSpans(): amp::expected<FlushResult, Error>
  -MoreSlotsAvailableAndLoaded(): bool
  -MoreSpansAvailableAndLoaded(): bool
  ===
  Responsibilities:
  - Drains slots - empties circular_buffer
  when subsequent data has been flushed
  - Returns status if data was flushed or stalled
}


class "mw::log::detail::CircularAllocator" as CircularAllocator {
-claimed_sequence_: std::atomic<std::size_t>
-buffer_: std::vector<Slot<T>>
---
+CircularAllocator(std::size_t, const T)
+AcquireSlotToWrite(): amp::optional<std::size_t>
+GetUnderlyingBufferFor(std::size_t): T&
+ReleaseSlot(std::size_t): void
+GetUsedCount(): std::size_t
}

interface "mw::log::detail::Backend" as Backend {
  +ReserveSlot(): amp::optional<SlotHandle>
  +GetLogRecord(const SlotHandle&): LogRecord&
  +FlushSlot(const SlotHandle&): void
}

class "mw::log::detail::FileOutputBackend" as FileOutputBackend {
  -buffer_allocator_: std::unique_ptr<CircularAllocator<LogRecord>>
  -slot_drainer_: SlotDrainer
  ---
  +FileOutputBackend(std::unique_ptr<IMessageBuilder>,
                     const std::int32_t,
                     std::unique_ptr<CircularAllocator<LogRecord>>,
                     std::unique_ptr<bmw::os::Fcntl>)
  +ReserveSlot(): amp::optional<SlotHandle>
  +FlushSlot(const SlotHandle&): void
  +GetLogRecord(const SlotHandle&): LogRecord&
  ===
  Responsibilities:
  Keeps statistics of dropped messages.
  ---
  Notes:
  Maybe running in seperate thread.
  Part of configuration will be passed through.
  ---
  Only place that messages may be dropped for the
  reason of failure to acquire slot.
}

class "template <typename T>\nmw::log::detail::Slot<T>" as Slot {
  +data: T
  +in_use: std::atomic<bool>
}

class "mw::log::detail::NonBlockingWriter" as NonBlockingWriter {
  -unistd_: std::unique_ptr<bmw::os::Unistd>
  -file_handle_: std::int32_t
  -number_of_flushed_bytes_: uint64_t
  -buffer_: amp::span<const std::uint8_t>
  -buffer_flushed_: Result
  -max_chunk_size_: std::size_t
  ---
  +NonBlockingWriter(const std::int32_t,
                     std::size_t,
                     std::unique_ptr<bmw::os::Unistd>)
  -InternalFlush(const uint64_t): amp::expected<ssize_t, bmw::os::Error>
  +FlushIntoFile(): amp::expected<Result, Error>
  +SetSpan(const amp::span<const std::uint8_t>&): void
  +GetMaxChunkSize(): std::size_t
}

class "namp::circular_buffer<SlotHandle, MaxSize>" as CircularBuffer {
Responsibilities:
Stores elements of static size.
Overwites data when fill.
Realizes FIFO pattern.
---
By design we exclude possibility of dropped
messages in CircularBuffer because the
size of SlotAllocator is smaller or equal
than CircularBuffer size.
}

interface "mw::log::detail::IMessageBuilder" as IMessageBuilder {
  +SetNextMessage(LogRecord&): void
  +GetNextSpan(): amp::optional<amp::span<const std::uint8_t>>
  ===
  Responsibilities:
  Iterates over spans of data to be serialized into output stream.
}

class "mw::log::detail::DltMessageBuilder" as DltMessageBuilder {
  +DltMessageBuilder(ecu_id)
  +GetNextSpan(): amp::optional<amp::span<const std::uint8_t>>
  +SetNextMessage(LogRecord&): void
}

class "mw::log::detail::TextMessageBuilder" as TextMessageBuilder {
  +TextMessageBuilder(app_id, ecu_id)
  +GetNextSpan(): amp::optional<amp::span<const std::uint8_t>>
  +SetNextMessage(log_record: LogRecord&): void
}

class LogRecord {
  -logEntry_: LogEntry
  -verbosePayload_: VerbosePayload
  ---
  +LogRecord(const std::size_t)
  +getLogEntry(): LogEntry&
  +getLogEntry(): const LogEntry&
  +getVerbosePayload(): VerbosePayload&
  +getVerbosePayload(): const VerbosePayload&
  ===
  Note:
  Used for data types
  that differ from message to message.
}

class "mw::log::detail::BackendLogMock" as BackendLogMock {
  +ReserveSlot(): amp::optional<SlotHandle>
  +GetLogRecord(const SlotHandle&): LogRecord&
  +FlushSlot(const SlotHandle&): void
}

class "mw::log::detail::Recorder" as Recorder {
  -backend: unique_ptr<Backend>
  ---
  +StartRecord(ctx: std::string_view, ll: LogLevel): amp::optional<SlotHandle>
  +StopRecord(slot: SlotHandle&): void
  +Log(T data): void
  ===
  Responsibilities:
  Opens and closes file.
  Uses formatters to serialize user data and header.
}

package "OSAL" {
class Unistd {
}
class Fcntl {
}
}

' Relationships
Backend <|.. FileOutputBackend
Backend <|.. BackendLogMock
IMessageBuilder <|.. DltMessageBuilder
IMessageBuilder <|.. TextMessageBuilder
DltMessageBuilder  *-- VerbosePayload
DltMessageBuilder  *-- LoggingIdentifier
TextMessageBuilder *-- VerbosePayload
TextMessageBuilder *-- LoggingIdentifier

FileOutputBackend *-- SlotDrainer
FileOutputBackend *-- CircularAllocator
CircularAllocator "0..n" *-- Slot

SlotDrainer *-- IMessageBuilder
SlotDrainer *-- NonBlockingWriter
SlotDrainer *-- CircularBuffer

Recorder *-- Backend

NonBlockingWriter *-- Unistd

SlotDrainer ..> Slot : "uses"

Recorder ..> Unistd : "close"
Recorder ..> Fcntl : "open\nSetNonBlocking/fctrl call"

CircularAllocator ..> CircularBuffer: Created based on CircularAllocatorSize
FileOutputBackend ..> CircularAllocator: "AcquireSlotToWrite()\nGetUnderlyingBufferFor()"

NonBlockingWriter ..> Unistd: write

note top of FileOutputBackend
  Test strategy:
  - Inject SlotDrainer with mocked OSAL.
  - Use MessageBuilderMock.
end note

note top of NonBlockingWriter
  Test strategy:
  - Inject OSAL mock by constructor argument
  with default value.
end note

note top of IMessageBuilder
  Test strategy:
  Insert the data, verify outcome.
end note

note top of SlotDrainer
  Test strategy:
  Insert NonBlocking Writer and using OSAL mock.
  Configure circular buffer size.
  Use MessageBuilderMock.
end note

note top of CircularAllocator
  Test strategy:
  Tested in data_router.
end note

note top of CircularBuffer
  Test strategy:
  Using amp::circular_buffer, not tested here.
end note

note top of FileOutputBackend
  Test strategy:
  Test just a glue code and not underlying classes.
  Inject SlotDrainer with mocked OSAL.
  Use MessageBuilderMock.
end note
@enduml